[package]
name = "comparer"
version = "0.3.0"
edition = "2021"
description = "A simple library to track changes in a HashMap/DashMap over several iterations"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ElmerByte/rust-comparer"
[dependencies]
dashmap = { version = "6.1", optional = true }

[features]
default = []
dashmap = ["dep:dashmap"]
